samples/_failures_safe/1761605931_4e76b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19769750.c: In function ‘main’:
./samples/SAFE/__tmp_19769750.c:155:18: error: expected ‘;’ at end of input
  155 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_19769750.c:155:13: error: expected declaration or statement at end of input
  155 |             break
      |             ^~~~~
./samples/SAFE/__tmp_19769750.c:155:13: error: expected declaration or statement at end of input
